--- a/index.html
+++ b/index.html
@@ -27,9 +27,12 @@
     </header>
     <div class="hero"></div>
     <div class="content">
-      <div class="search-engine-optimization">
+      <div 
+      id="search-engine-optimization"
+      class="search-engine-optimization"
+      >
         <img
-          src="./assets/images/search-engine-optimization.jpg"
+          src="./assets/css/images/search-engine-optimization.jpg"
           class="float-left"
         />
         <h2>Search Engine Optimization</h2>
@@ -45,7 +48,7 @@
         class="online-reputation-management"
       >
         <img
-          src="./assets/images/online-reputation-management.jpg"
+          src="./assets/css/images/online-reputation-management.jpg"
           class="float-right"
         />
         <h2>Online Reputation Management</h2>
@@ -59,7 +62,7 @@
       </div>
       <div id="social-media-marketing" class="social-media-marketing">
         <img
-          src="./assets/images/social-media-marketing.jpg"
+          src="./assets/css/images/social-media-marketing.jpg"
           class="float-left"
         />
         <h2>Social Media Marketing</h2>
@@ -74,7 +77,7 @@
     <div class="benefits">
       <div class="benefit-lead">
         <h3>Lead Generation</h3>
-        <img src="./assets/images/lead-generation.png" />
+        <img src="./assets/css/images/lead-generation.png" />
         <p>
           Inbound strategies for lead generation require less work for your
           business, bringing customers directly to your website.
@@ -82,7 +85,7 @@
       </div>
       <div class="benefit-brand">
         <h3>Brand Awareness</h3>
-        <img src="./assets/images/brand-awareness.png" />
+        <img src="./assets/css/images/brand-awareness.png" />
         <p>
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
@@ -90,16 +93,16 @@
       </div>
       <div class="benefit-cost">
         <h3>Cost Management</h3>
-        <img src="./assets/images/cost-management.png" />
+        <img src="./assets/css/images/cost-management.png" />
         <p>
           As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
         </p>
       </div>
     </div>
-    <div class="footer">
+    <footer class="footer">
       <h2>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
-    </div>
+    </footer>
   </body>
 </html>
