added more edits to css as well as html

--- a/index.html
+++ b/index.html
@@ -9,32 +9,24 @@
   <body>
     <header class="header">
       <h1>Hori<span class="seo">seo</span>n</h1>
-      <div>
+      <section class="links">
         <ul>
-          <li>
+          <li class="jumps">
             <a href="#search-engine-optimization">Search Engine Optimization</a>
           </li>
-          <li>
-            <a href="#online-reputation-management"
-              >Online Reputation Management</a
-            >
+          <li class="jumps">
+            <a href="#online-reputation-management">Online Reputation Management</a>
           </li>
-          <li>
+          <li class="jumps">
             <a href="#social-media-marketing">Social Media Marketing</a>
           </li>
         </ul>
-      </div>
+      </section>
     </header>
     <div class="hero"></div>
     <div class="content">
-      <div 
-      id="search-engine-optimization"
-      class="search-engine-optimization"
-      >
-        <img
-          src="./assets/css/images/search-engine-optimization.jpg"
-          class="float-left"
-        />
+      <section id="search-engine-optimization" class="search-engine-optimization">
+        <img src="./assets/css/images/search-engine-optimization.jpg" class="float-left"/>
         <h2>Search Engine Optimization</h2>
         <p>
           The dominance of mobile internet use means that users are searching
@@ -42,7 +34,7 @@
           home. Search Engine Optimization (SEO) allows you to increase your
           visibility and find the right customers for your business.
         </p>
-      </div>
+      </section>
       <div
         id="online-reputation-management"
         class="online-reputation-management"
