--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </section>
     </header>
     <div class="hero"></div>
-    <div class="content">
+    <main class="content">
       <section id="search-engine-optimization" class="search-engine-optimization">
         <img src="./assets/css/images/search-engine-optimization.jpg" class="float-left"/>
         <h2>Search Engine Optimization</h2>
@@ -35,10 +35,7 @@
           visibility and find the right customers for your business.
         </p>
       </section>
-      <div
-        id="online-reputation-management"
-        class="online-reputation-management"
-      >
+      <div id="online-reputation-management" class="online-reputation-management">
         <img
           src="./assets/css/images/online-reputation-management.jpg"
           class="float-right"
@@ -65,32 +62,32 @@
           your lead generation.
         </p>
       </div>
-    </div>
+    </main>
     <div class="benefits">
-      <div class="benefit-lead">
+      <section class="benefit-lead">
         <h3>Lead Generation</h3>
         <img src="./assets/css/images/lead-generation.png" />
         <p>
           Inbound strategies for lead generation require less work for your
           business, bringing customers directly to your website.
         </p>
-      </div>
-      <div class="benefit-brand">
+      </section>
+      <section class="benefit-brand">
         <h3>Brand Awareness</h3>
         <img src="./assets/css/images/brand-awareness.png" />
         <p>
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
         </p>
-      </div>
-      <div class="benefit-cost">
+      </section>
+      <section class="benefit-cost">
         <h3>Cost Management</h3>
         <img src="./assets/css/images/cost-management.png" />
         <p>
           As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
         </p>
-      </div>
+      </section>
     </div>
     <footer class="footer">
       <h2>Made with ❤️️ by Horiseon</h2>
