added alt attributes to each img

--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
         </ul>
       </section>
     </header>
-    <div class="hero"></div>
+    <div class="hero" alt="Background image of people looking over work on a desk"></div>
     <main class="content">
       <section id="search-engine-optimization" class="search-engine-optimization">
-        <img src="./assets/css/images/search-engine-optimization.jpg" class="float-left"/>
+        <img src="./assets/css/images/search-engine-optimization.jpg" alt="Picture of notepad on table with seo visualtization"
+        class="float-left"/>
         <h2>Search Engine Optimization</h2>
         <p>
           The dominance of mobile internet use means that users are searching
@@ -36,10 +37,9 @@
         </p>
       </section>
       <div id="online-reputation-management" class="online-reputation-management">
-        <img
-          src="./assets/css/images/online-reputation-management.jpg"
-          class="float-right"
-        />
+        <img 
+        src="./assets/css/images/online-reputation-management.jpg" alt="Picture of labtop with reputation chart" 
+        class="float-right"/>
         <h2>Online Reputation Management</h2>
         <p>
           The web is full of opinions, and some of these can be negative. Social
@@ -51,7 +51,7 @@
       </div>
       <div id="social-media-marketing" class="social-media-marketing">
         <img
-          src="./assets/css/images/social-media-marketing.jpg"
+          src="./assets/css/images/social-media-marketing.jpg" alt="Picture of table filled with social media terms"
           class="float-left"
         />
         <h2>Social Media Marketing</h2>
@@ -66,7 +66,7 @@
     <div class="benefits">
       <section class="benefit-lead">
         <h3>Lead Generation</h3>
-        <img src="./assets/css/images/lead-generation.png" />
+        <img src="./assets/css/images/lead-generation.png" alt="Icon of a cog wheel pointing to a dollar sign" />
         <p>
           Inbound strategies for lead generation require less work for your
           business, bringing customers directly to your website.
@@ -74,7 +74,7 @@
       </section>
       <section class="benefit-brand">
         <h3>Brand Awareness</h3>
-        <img src="./assets/css/images/brand-awareness.png" />
+        <img src="./assets/css/images/brand-awareness.png" alt="Icon of person in a suit but head is a lightbulb" />
         <p>
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
@@ -82,7 +82,7 @@
       </section>
       <section class="benefit-cost">
         <h3>Cost Management</h3>
-        <img src="./assets/css/images/cost-management.png" />
+        <img src="./assets/css/images/cost-management.png" alt="Icon of cogwheels as dollar signs" />
         <p>
           As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
