added a proper README file, also added in more comments

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="header">
       <h1>Hori<span class="seo">seo</span>n</h1>
-      <section class="links">
+      <section class="links"> <!--allows user to jump to certain points in the page by pressing on the links-->
         <ul>
           <li class="jumps">
             <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -23,8 +23,8 @@
         </ul>
       </section>
     </header>
-    <div class="hero" alt="Background image of people looking over work on a desk"></div>
-    <main class="content">
+    <div class="hero" alt="Background image of people looking over work on a desk"></div> <!--adds the image between the header and the body-->
+    <main class="content"> <!--main section of the entire page-->
       <section id="search-engine-optimization" class="search-engine-optimization">
         <img src="./assets/css/images/search-engine-optimization.jpg" alt="Picture of notepad on table with seo visualtization"
         class="float-left"/>
@@ -36,7 +36,7 @@
           visibility and find the right customers for your business.
         </p>
       </section>
-      <div id="online-reputation-management" class="online-reputation-management">
+      <section id="online-reputation-management" class="online-reputation-management">
         <img 
         src="./assets/css/images/online-reputation-management.jpg" alt="Picture of labtop with reputation chart" 
         class="float-right"/>
@@ -48,8 +48,8 @@
           control over what potential customers see when they search for your
           business.
         </p>
-      </div>
-      <div id="social-media-marketing" class="social-media-marketing">
+      </section>
+      <section id="social-media-marketing" class="social-media-marketing">
         <img
           src="./assets/css/images/social-media-marketing.jpg" alt="Picture of table filled with social media terms"
           class="float-left"
@@ -61,9 +61,9 @@
           to your brand, using analytics to find the right markets and increase
           your lead generation.
         </p>
-      </div>
+      </section>
     </main>
-    <div class="benefits">
+    <div class="benefits"> <!--section on the right side of the page-->
       <section class="benefit-lead">
         <h3>Lead Generation</h3>
         <img src="./assets/css/images/lead-generation.png" alt="Icon of a cog wheel pointing to a dollar sign" />
